recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:3: error: not found: value lenght
  return lenght(l)-1
         ^