recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  return lenght(l)-1
}